@@ -1,3 +1,8 @@
+Tue Aug 10 17:24:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htsearch/Display.cc(expandVariables): clean up, simplify and
+	label lexical analyzer states.
+
 Tue Aug 10 17:04:54 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htsearch/Display.cc(expandVariables, outputVariable): add handling
